<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >




        <EditText
            android:id="@+id/txtName"
            android:layout_width="320dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:background="@drawable/custom_edittext_login"
            android:hint="@string/enter_your_name_editText"
            android:padding="5sp" />


        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_column="1"
            android:textColor="@color/black"
            android:background="@drawable/custom_edittext_login"
            android:hint="@string/enter_your_email_editText"
            android:inputType="textEmailAddress"
            android:padding="5sp" />


        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_column="1"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:background="@drawable/custom_edittext_login"
            android:hint="@string/enter_your_password_editText"
            android:padding="5sp" />


        <EditText
            android:id="@+id/txtRePassword"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_column="1"
            android:textColor="@color/black"
            android:background="@drawable/custom_edittext_login"
            android:hint="@string/enter_your_repassword_editText"
            android:padding="5sp" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/TextInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/primaryDarkColor"
            android:text="@string/button_signup" />
    </LinearLayout>

</ScrollView>